<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/item_phone"
        android:icon="@drawable/ic_phone"
        android:title="@string/menu_main_item_phone_title" />

    <item
        android:id="@+id/item_chat"
        android:icon="@drawable/ic_chat"
        android:title="@string/menu_main_item_chat_title" />

    <item
        android:id="@+id/item_scan"
        android:icon="@drawable/ic_scan"
        android:title="@string/menu_main_item_scan_title" />

    <item
        android:id="@+id/item_explore"
        android:icon="@drawable/ic_explore"
        android:title="@string/menu_main_item_explore_title" />

    <item
        android:id="@+id/item_wallet"
        android:icon="@drawable/ic_wallet"
        android:title="@string/menu_main_item_wallet_title" />
</menu>